test/types/range/cast-assign-init/illegal-assigns.2-4.good
illegal-assigns.chpl:11: error: assigning to a range with idxType int(8) from a range with idxType int(64) without an explicit cast
