test/types/range/cast-assign-init/illegal-assigns.compopts
-s to='bool' -s from='bool'  # illegal-assigns.ok.good
-s to='bool' -s from='color'  # illegal-assigns.0-1.good
-s to='bool' -s from='int(8)'  # illegal-assigns.0-2.good
-s to='bool' -s from='uint(8)'  # illegal-assigns.0-3.good
-s to='bool' -s from='int(64)'  # illegal-assigns.0-4.good
-s to='bool' -s from='uint(64)'  # illegal-assigns.0-5.good
-s to='color' -s from='bool'  # illegal-assigns.1-0.good
-s to='color' -s from='color'  # illegal-assigns.ok.good
-s to='color' -s from='int(8)'  # illegal-assigns.1-2.good
-s to='color' -s from='uint(8)'  # illegal-assigns.1-3.good
-s to='color' -s from='int(64)'  # illegal-assigns.1-4.good
-s to='color' -s from='uint(64)'  # illegal-assigns.1-5.good
-s to='int(8)' -s from='bool'  # illegal-assigns.ok.good
-s to='int(8)' -s from='color'  # illegal-assigns.2-1.good
-s to='int(8)' -s from='int(8)'  # illegal-assigns.ok.good
-s to='int(8)' -s from='uint(8)'  # illegal-assigns.2-3.good
-s to='int(8)' -s from='int(64)'  # illegal-assigns.2-4.good
-s to='int(8)' -s from='uint(64)'  # illegal-assigns.2-5.good
-s to='uint(8)' -s from='bool'  # illegal-assigns.ok.good
-s to='uint(8)' -s from='color'  # illegal-assigns.3-1.good
-s to='uint(8)' -s from='int(8)'  # illegal-assigns.ok.good
-s to='uint(8)' -s from='uint(8)'  # illegal-assigns.ok.good
-s to='uint(8)' -s from='int(64)'  # illegal-assigns.3-4.good
-s to='uint(8)' -s from='uint(64)'  # illegal-assigns.3-5.good
-s to='int(64)' -s from='bool'  # illegal-assigns.ok.good
-s to='int(64)' -s from='color'  # illegal-assigns.4-1.good
-s to='int(64)' -s from='int(8)'  # illegal-assigns.ok.good
-s to='int(64)' -s from='uint(8)'  # illegal-assigns.ok.good
-s to='int(64)' -s from='int(64)'  # illegal-assigns.ok.good
-s to='int(64)' -s from='uint(64)'  # illegal-assigns.4-5.good
-s to='uint(64)' -s from='bool'  # illegal-assigns.ok.good
-s to='uint(64)' -s from='color'  # illegal-assigns.5-1.good
-s to='uint(64)' -s from='int(8)'  # illegal-assigns.ok.good
-s to='uint(64)' -s from='uint(8)'  # illegal-assigns.ok.good
-s to='uint(64)' -s from='int(64)'  # illegal-assigns.ok.good
-s to='uint(64)' -s from='uint(64)'  # illegal-assigns.ok.good
